Prepare for play-build-base for use in Play
* Update snapshots script so it doesn't pass version via tag to play
* Upgrade to latest sbt-release
* Turn off fatal warnings - no projects want it
* Lower target javac for sbt projects to 1.6